# greenland-shark-longevity-genomics

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  environment.orthology.yml  environment.yml  pyproject.toml
config/: candidate_panels.yaml  config.yaml  publication_claims.yaml
docs/: annotation_rescue.md  biological_hypotheses.md  claims_register.md  data_manifest.md  domain_validation.md  maintainability_review.md  orthology_setup.md  release_checklist.md  repeat_annotation_setup.md  runbook.md  study_design.md
tests/: test_annotation_rescue.py  test_candidate_orthofinder.py  test_candidate_panels.py  test_candidate_validation.py  test_fasta_qc.py  test_genome_validation.py  test_hmmer_pfam.py  test_integration_scoring.py  test_local_file_inventory.py  test_metadata.py  test_orthofinder_workflow.py  test_phase3_inputs.py  test_phase4c_locus_review.py  test_phase4d_consolidation.py  test_phase4e_locus_hardening.py  test_phase5_evidence_integration.py  test_phase5_repeat_context.py  test_phase5b_repeat_annotation.py  test_phase5c_repeat_qc.py  test_phase6_telomere.py  test_phase7_rnaseq.py  test_phase7b_quantification_strategy.py  test_phase7c_expression_reference.py  test_phase7d_rnaseq_quantification.py  test_phase7e_expression_hardening.py  test_phase8a_expression_evidence_integration.py  test_phase8b_final_evidence_scoring.py  test_phase9_package_audit.py  test_phase9_report_generation.py  test_publication_claims.py  test_reference_intake.py
tools/: miniprot-docker.cmd  phase7d_sra_to_fastq_container.sh  salmon-docker.cmd  (+1 more)
(+67 files in other folders)
