[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "greenland-shark-longevity"
version = "0.1.0"
description = "MVP workflow scaffold for conservative Greenland shark longevity genomics evidence ranking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

